add gallary games componend and scrool up function

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,13 +26,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#gallery" class="nav-link">
+                            <a routerLink="/main" fragment="gallery" class="nav-link" (click)="scrollTo('gallery')">
                                 Gallery
                             </a>
                         </li>
 
                         <li class="nav-item">
-                            <a href="#games" class="nav-link">
+                            <a routerLink="/main" fragment="games" class="nav-link" (click)="scrollTo('games')">
                                 Games
                             </a>
                         </li>
