--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-3132px, 0px, 0px); transition: all 1s ease 0s; width: 6264px;"><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-4">
             <div class="slider-item">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./assets/images/hostel.mp4" type="video/mp4">
+                    <source src="./images/hostel.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Start Your Beautiful &amp; </h1>
@@ -24,7 +24,7 @@
         </div></div><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-5">
             <div class="">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./assets/images/incuppy-2.mp4" type="video/mp4">
+                    <source src="./images/incuppy-2.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Explore Your Potential &amp;  </h1>
@@ -43,7 +43,7 @@
         </div></div><div class="owl-item" style="width: 1044px;"><div class="slider-item banner-bg-4">
             <div class="slider-item">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./assets/images/hostel.mp4" type="video/mp4">
+                    <source src="./images/hostel.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Start Your Beautiful &amp; </h1>
@@ -62,7 +62,7 @@
         </div></div><div class="owl-item active" style="width: 1044px;"><div class="slider-item banner-bg-5">
             <div class="">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./assets/images/incuppy-2.mp4" type="video/mp4">
+                    <source src="./images/incuppy-2.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Explore Your Potential &amp;  </h1>
@@ -81,7 +81,7 @@
         </div></div><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-4">
             <div class="slider-item">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./assets/images/hostel.mp4" type="video/mp4">
+                    <source src="./images/hostel.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Start Your Beautiful &amp; </h1>
@@ -100,7 +100,7 @@
         </div></div><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-5">
             <div class="">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./assets/images/incuppy-2.mp4" type="video/mp4">
+                    <source src="./images/incuppy-2.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Explore Your Potential &amp;  </h1>
@@ -117,8 +117,7 @@
                 </div> -->
             </div>
         </div></div></div></div><div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><i class="ri-arrow-left-line"></i></button><button type="button" role="presentation" class="owl-next"><i class="ri-arrow-right-line"></i></button></div><div class="owl-dots disabled"></div></div>
-</div>
-<div class="campus-information-area pt-100 pb-40">
+</div><div class="campus-information-area pt-100 pb-40">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 aos-init aos-animate" data-aos="fade-right" data-aos-easing="ease-in-sine" data-aos-duration="1300" data-aos-once="true">
@@ -248,236 +247,3 @@
         </div>
     </div>
 </div>
-<div class="academic-area pt-70 pb-20 bg-f4f6f9 mb-3" id="gallery">
-    <div class="container">
-        <div class="section-title">
-            <h2>Gallery</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut elit tellus luctus nec ullamcorper mattis
-            </p>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200" data-aos-once="true">
-                <div class="single-academics-card2 bg-1">
-                    <div class="serial">
-                        <p>01.</p>
-                    </div>
-                    <div class="academic-content">
-                        <div class="academic-top-content">
-                            <i class="flaticon-graduation"></i>
-                            <a href="#">
-                                <h3>Block</h3>
-                            </a>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet consectetur ad
-                            piscing elit ut elit tellus luctus nec dolor sit amet consec teturul</p>
-                        <!-- <a href="#" class="read-more-btn white-color">Undergraduate Education<i
-                                class="flaticon-next"></i></a> -->
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="400" data-aos-once="true">
-                <div class="single-academics-card2 bg-2">
-                    <div class="serial">
-                        <p>02.</p>
-                    </div>
-                    <div class="academic-content">
-                        <div class="academic-top-content">
-                            <i class="flaticon-graduation"></i>
-                            <a href="#">
-                                <h3>Room Inside</h3>
-                            </a>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet consectetur ad
-                            piscing elit ut elit tellus luctus nec dolor sit amet consec teturul</p>
-                        <!-- <a href="#" class="read-more-btn white-color">Undergraduate Education<i
-                                class="flaticon-next"></i></a> -->
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="600" data-aos-once="true">
-                <div class="single-academics-card2 bg-3">
-                    <div class="serial">
-                        <p>03.</p>
-                    </div>
-                    <div class="academic-content">
-                        <div class="academic-top-content">
-                            <i class="flaticon-graduation"></i>
-                            <a href="#">
-                                <h3>Corridor</h3>
-                            </a>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet consectetur ad
-                            piscing elit ut elit tellus luctus nec dolor sit amet consec teturul</p>
-                        <!-- <a href="#" class="read-more-btn white-color">Undergraduate Education<i
-                                class="flaticon-next"></i></a> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="events-area pt-70 pb-50">
-    <div class="container">
-        <div class="section-title">
-            <h2>Other Features</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut elit tellus luctus nec ullamcorper mattis
-            </p>
-        </div>
-        <div class="events-slider mb-20 owl-carousel owl-theme owl-loaded owl-drag">
-            <div class="owl-stage-outer">
-                <div class="owl-stage" style="transform: translate3d(-966px, 0px, 0px); transition: all 0s ease 0s; width: 2898px;"><div class="owl-item cloned" style="width: 292px; margin-right: 30px;">
-                        <div class="single-events-card style2">
-                            <div class="events-image">
-                                <a href="#"><img src="assets/images/amenities.png" alt="Image"></a>
-                            </div>
-                            <div class="events-content">
-                                <a href="#">
-                                    <h3>Rooms</h3>
-                                </a>
-                                <p>Each room in the hostel is a part of a unit where two rooms share a common wash
-                                    basin area, bathroom, and a small balcony
-                                    The bathroom contains toilet area, water heater fitted.Each room has its
-                                    separate sliding door to access wash basin area,
-                                    bathroom, and balcony.Each room has separate entry.</p>
-                            </div>
-                        </div>
-                    </div><div class="owl-item cloned" style="width: 292px; margin-right: 30px;">
-                        <div class="single-events-card style2">
-                            <div class="events-image">
-                                <a href="#"><img src="assets/images/hostel-food.png" alt="Image"></a>
-                            </div>
-                            <div class="events-content">
-                                <a href="#">
-                                    <h3>Food</h3>
-                                </a>
-                                <p>Food is one of the basic necessities of life. Food contains nutrients—substances
-                                    essential for the growth, repair, and maintenance of body tissues and for the
-                                    regulation of vital processes. Nutrients provide the energy our bodies need to
-                                    function.
-                                    The energy in food is measured in units called calories.
-                                </p>
-
-                            </div>
-                        </div>
-                    </div><div class="owl-item cloned" style="width: 292px; margin-right: 30px;">
-                        <div class="single-events-card style2">
-                            <div class="events-image">
-                                <a href="#"><img src="assets/images/security-access.jpg" alt="Image"></a>
-                            </div>
-                            <div class="events-content">
-                                <a href="#">
-                                    <h3>Security</h3>
-                                </a>
-                                <p>the system ensures accurate attendance records, allowing the warden to
-                                    efficiently manage students. Parents are also
-                                    notified instantly if their ward is absent, providing timely updates and
-                                    fostering better communication.A system collects biometric characteristics
-                                    unique to every person. </p>
-
-                            </div>
-                        </div>
-                    </div>
-                    
-                    
-                    
-                <div class="owl-item cloned active" style="width: 292px; margin-right: 30px;">
-                        <div class="single-events-card style2">
-                            <div class="events-image">
-                                <a href="#"><img src="assets/images/amenities.png" alt="Image"></a>
-                            </div>
-                            <div class="events-content">
-                                <a href="#">
-                                    <h3>Rooms</h3>
-                                </a>
-                                <p>Each room in the hostel is a part of a unit where two rooms share a common wash
-                                    basin area, bathroom, and a small balcony
-                                    The bathroom contains toilet area, water heater fitted.Each room has its
-                                    separate sliding door to access wash basin area,
-                                    bathroom, and balcony.Each room has separate entry.</p>
-                            </div>
-                        </div>
-                    </div><div class="owl-item cloned active" style="width: 292px; margin-right: 30px;">
-                        <div class="single-events-card style2">
-                            <div class="events-image">
-                                <a href="#"><img src="assets/images/hostel-food.png" alt="Image"></a>
-                            </div>
-                            <div class="events-content">
-                                <a href="#">
-                                    <h3>Food</h3>
-                                </a>
-                                <p>Food is one of the basic necessities of life. Food contains nutrients—substances
-                                    essential for the growth, repair, and maintenance of body tissues and for the
-                                    regulation of vital processes. Nutrients provide the energy our bodies need to
-                                    function.
-                                    The energy in food is measured in units called calories.
-                                </p>
-
-                            </div>
-                        </div>
-                    </div><div class="owl-item cloned active" style="width: 292px; margin-right: 30px;">
-                        <div class="single-events-card style2">
-                            <div class="events-image">
-                                <a href="#"><img src="assets/images/security-access.jpg" alt="Image"></a>
-                            </div>
-                            <div class="events-content">
-                                <a href="#">
-                                    <h3>Security</h3>
-                                </a>
-                                <p>the system ensures accurate attendance records, allowing the warden to
-                                    efficiently manage students. Parents are also
-                                    notified instantly if their ward is absent, providing timely updates and
-                                    fostering better communication.A system collects biometric characteristics
-                                    unique to every person. </p>
-
-                            </div>
-                        </div>
-                    </div></div>
-            </div>
-            <!-- <div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><i
-                        class="ri-arrow-left-line"></i></button><button type="button" role="presentation"
-                    class="owl-next"><i class="ri-arrow-right-line"></i></button></div>
-            <div class="owl-dots"><button role="button" class="owl-dot active"><span></span></button><button
-                    role="button" class="owl-dot"><span></span></button><button role="button"
-                    class="owl-dot"><span></span></button><button role="button"
-                    class="owl-dot"><span></span></button></div> -->
-        <div class="owl-nav disabled"><button type="button" role="presentation" class="owl-prev"><i class="ri-arrow-left-line"></i></button><button type="button" role="presentation" class="owl-next"><i class="ri-arrow-right-line"></i></button></div><div class="owl-dots disabled"><button role="button" class="owl-dot active"><span></span></button></div></div>
-    </div>
-</div>
-<div class="health-care-area ptb-50 pb-0 bg-f4f6f9" id="games">
-        <div class="container">
-            <div class="section-title">
-                <h2>Games</h2>
-                <p>Add Some Game Time To Your Evenings.</p>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-6 col-md-6">
-                    <div class="single-health-care-card style1">
-                        <div class="img">
-                            <a href="#"><img src="assets/images/snooker.jpg" alt="Image"></a>
-                        </div>
-                        <div class="health-care-content">
-                            <a href="#">
-                                <h3>Let Me Be The One To Break It Up.</h3>
-                            </a>
-                            <p>Lorem ipsum dolor sit amet con sec teturo adip iscing elit sed do eiusmod tempor insi
-                                didunt ut labore et dolore</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="single-health-care-card style2">
-                        <div class="img">
-                            <a href="#"><img src="assets/images/game-chess.jpg" alt="Image"></a>
-                        </div>
-                        <div class="health-care-content">
-                            <a href="#">
-                                <h3>Battle Field Of The Mind</h3>
-                            </a>
-                            <p>Lorem ipsum dolor sit amet con sec teturo adip iscing elit sed do eiusmod tempor insi
-                                didunt ut labore et dolore</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
