--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,14 +3,15 @@
         <div class="row">
             <div class="col-lg-5 col-sm-6">
                 <div class="footer-logo-area">
-                    <a href="index.html"><img src="assets\images/incuppy.png" alt="Image"></a>
+                    <a href="index.html"><img src="assets/images/incuppy.png" alt="Image"></a>
                     <p>Sanu University was established by J.H Merthon in 1810 for the public benefit. Afterwards, it
                         is recognized globally</p>
                     <div class="contact-list">
                         <ul>
                             <li><a href="tel:+01987655567685">+01-9876-5556-7685
                                 </a></li>
-                            <li><a href="#"><span class="__cf_email__" data-cfemail="29484d444047695a48475c074c4d5c">[email&nbsp;protected]</span></a>
+                            <li><a href="#"><span class="__cf_email__"
+                                        data-cfemail="29484d444047695a48475c074c4d5c">[email&#160;protected]</span></a>
                             </li>
                         </ul>
                     </div>
@@ -41,24 +42,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="footer-widjet">
-                    <h3>Contact Us</h3>
-                    <div class="list">
-                        <ul>
-                            <li><a href="#">+91 79456123</a></li>
-                            <li><a href="#">abcd@gamil.com</a></li>
-                            <li><a href="#">Add litin, 103-1 kitterground</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="shape">
-            <img src="assets\images/shape-1.png" alt="Image">
-        </div>
+            
     </div>
 </div>
+
 <div class="copyright-area">
     <div class="container">
         <div class="copyright">
