--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-3132px, 0px, 0px); transition: all 1s ease 0s; width: 6264px;"><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-4">
             <div class="slider-item">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./images/hostel.mp4" type="video/mp4">
+                    <source src="./assets/images/hostel.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Start Your Beautiful &amp; </h1>
@@ -24,7 +24,7 @@
         </div></div><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-5">
             <div class="">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./images/incuppy-2.mp4" type="video/mp4">
+                    <source src="./assets/images/incuppy-2.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Explore Your Potential &amp;  </h1>
@@ -43,7 +43,7 @@
         </div></div><div class="owl-item" style="width: 1044px;"><div class="slider-item banner-bg-4">
             <div class="slider-item">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./images/hostel.mp4" type="video/mp4">
+                    <source src="./assets/images/hostel.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Start Your Beautiful &amp; </h1>
@@ -62,7 +62,7 @@
         </div></div><div class="owl-item active" style="width: 1044px;"><div class="slider-item banner-bg-5">
             <div class="">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./images/incuppy-2.mp4" type="video/mp4">
+                    <source src="./assets/images/incuppy-2.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Explore Your Potential &amp;  </h1>
@@ -81,7 +81,7 @@
         </div></div><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-4">
             <div class="slider-item">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./images/hostel.mp4" type="video/mp4">
+                    <source src="./assets/images/hostel.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Start Your Beautiful &amp; </h1>
@@ -100,7 +100,7 @@
         </div></div><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-5">
             <div class="">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
-                    <source src="./images/incuppy-2.mp4" type="video/mp4">
+                    <source src="./assets/images/incuppy-2.mp4" type="video/mp4">
                 </video>
                 <div class="note">
                     <h1>Explore Your Potential &amp;  </h1>
