--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -5,8 +5,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut elit tellus luctus nec ullamcorper mattis
             </p>
         </div>
+        
         <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200" data-aos-once="true">
+            <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="400" data-aos-once="true">
                 <div class="single-academics-card2 bg-1">
                     <div class="serial">
                         <p>01.</p>
@@ -25,7 +26,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="400" data-aos-once="true">
+            
+            <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200" data-aos-once="true">
                 <div class="single-academics-card2 bg-2">
                     <div class="serial">
                         <p>02.</p>
@@ -44,6 +46,7 @@
                     </div>
                 </div>
             </div>
+            
             <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="600" data-aos-once="true">
                 <div class="single-academics-card2 bg-3">
                     <div class="serial">
@@ -64,8 +67,10 @@
                 </div>
             </div>
         </div>
+        
     </div>
-</div><div class="events-area pt-70 pb-50">
+</div>
+<div class="events-area pt-70 pb-50">
     <div class="container">
         <div class="section-title">
             <h2>Other Features</h2>
@@ -74,7 +79,9 @@
         </div>
         <div class="events-slider mb-20 owl-carousel owl-theme owl-loaded owl-drag">
             <div class="owl-stage-outer">
-                <div class="owl-stage" style="transform: translate3d(-966px, 0px, 0px); transition: all 0s ease 0s; width: 2898px;"><div class="owl-item cloned" style="width: 292px; margin-right: 30px;">
+                <div class="owl-stage"
+                    style="transform: translate3d(-1452px, 0px, 0px); transition: all 0s ease 0s; width: 5445px;">
+                    <div class="owl-item cloned" style="width: 333px; margin-right: 30px;">
                         <div class="single-events-card style2">
                             <div class="events-image">
                                 <a href="#"><img src="assets/images/amenities.png" alt="Image"></a>
@@ -90,7 +97,8 @@
                                     bathroom, and balcony.Each room has separate entry.</p>
                             </div>
                         </div>
-                    </div><div class="owl-item cloned" style="width: 292px; margin-right: 30px;">
+                    </div>
+                    <div class="owl-item cloned" style="width: 333px; margin-right: 30px;">
                         <div class="single-events-card style2">
                             <div class="events-image">
                                 <a href="#"><img src="assets/images/hostel-food.png" alt="Image"></a>
@@ -108,7 +116,8 @@
 
                             </div>
                         </div>
-                    </div><div class="owl-item cloned" style="width: 292px; margin-right: 30px;">
+                    </div>
+                    <div class="owl-item cloned" style="width: 333px; margin-right: 30px;">
                         <div class="single-events-card style2">
                             <div class="events-image">
                                 <a href="#"><img src="assets/images/security-access.jpg" alt="Image"></a>
@@ -126,61 +135,7 @@
                             </div>
                         </div>
                     </div>
-                    
-                    
-                    
-                <div class="owl-item cloned active" style="width: 292px; margin-right: 30px;">
-                        <div class="single-events-card style2">
-                            <div class="events-image">
-                                <a href="#"><img src="assets/images/amenities.png" alt="Image"></a>
-                            </div>
-                            <div class="events-content">
-                                <a href="#">
-                                    <h3>Rooms</h3>
-                                </a>
-                                <p>Each room in the hostel is a part of a unit where two rooms share a common wash
-                                    basin area, bathroom, and a small balcony
-                                    The bathroom contains toilet area, water heater fitted.Each room has its
-                                    separate sliding door to access wash basin area,
-                                    bathroom, and balcony.Each room has separate entry.</p>
-                            </div>
-                        </div>
-                    </div><div class="owl-item cloned active" style="width: 292px; margin-right: 30px;">
-                        <div class="single-events-card style2">
-                            <div class="events-image">
-                                <a href="#"><img src="assets/images/hostel-food.png" alt="Image"></a>
-                            </div>
-                            <div class="events-content">
-                                <a href="#">
-                                    <h3>Food</h3>
-                                </a>
-                                <p>Food is one of the basic necessities of life. Food contains nutrients—substances
-                                    essential for the growth, repair, and maintenance of body tissues and for the
-                                    regulation of vital processes. Nutrients provide the energy our bodies need to
-                                    function.
-                                    The energy in food is measured in units called calories.
-                                </p>
-
-                            </div>
-                        </div>
-                    </div><div class="owl-item cloned active" style="width: 292px; margin-right: 30px;">
-                        <div class="single-events-card style2">
-                            <div class="events-image">
-                                <a href="#"><img src="assets/images/security-access.jpg" alt="Image"></a>
-                            </div>
-                            <div class="events-content">
-                                <a href="#">
-                                    <h3>Security</h3>
-                                </a>
-                                <p>the system ensures accurate attendance records, allowing the warden to
-                                    efficiently manage students. Parents are also
-                                    notified instantly if their ward is absent, providing timely updates and
-                                    fostering better communication.A system collects biometric characteristics
-                                    unique to every person. </p>
-
-                            </div>
-                        </div>
-                    </div></div>
+                </div>
             </div>
             <!-- <div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><i
                         class="ri-arrow-left-line"></i></button><button type="button" role="presentation"
@@ -189,6 +144,6 @@
                     role="button" class="owl-dot"><span></span></button><button role="button"
                     class="owl-dot"><span></span></button><button role="button"
                     class="owl-dot"><span></span></button></div> -->
-        <div class="owl-nav disabled"><button type="button" role="presentation" class="owl-prev"><i class="ri-arrow-left-line"></i></button><button type="button" role="presentation" class="owl-next"><i class="ri-arrow-right-line"></i></button></div><div class="owl-dots disabled"><button role="button" class="owl-dot active"><span></span></button></div></div>
+        </div>
     </div>
 </div>
