--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -1,4 +1,4 @@
-<div class="health-care-area ptb-50 pb-0 bg-f4f6f9" >
+<div class="health-care-area ptb-50 pb-0 bg-f4f6f9" id="games">
     <div class="container">
         <div class="section-title">
             <h2>Games</h2>
@@ -36,3 +36,4 @@
         </div>
     </div>
 </div>
+
