--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -79,9 +79,7 @@
         </div>
         <div class="events-slider mb-20 owl-carousel owl-theme owl-loaded owl-drag">
             <div class="owl-stage-outer">
-                <div class="owl-stage"
-                    style="transform: translate3d(-1452px, 0px, 0px); transition: all 0s ease 0s; width: 5445px;">
-                    <div class="owl-item cloned" style="width: 333px; margin-right: 30px;">
+                <div class="owl-stage" style="transform: translate3d(-1326px, 0px, 0px); transition: all 0s ease 0s; width: 3978px;"><div class="owl-item cloned" style="width: 412px; margin-right: 30px;">
                         <div class="single-events-card style2">
                             <div class="events-image">
                                 <a href="#"><img src="assets/images/amenities.png" alt="Image"></a>
@@ -97,8 +95,7 @@
                                     bathroom, and balcony.Each room has separate entry.</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="owl-item cloned" style="width: 333px; margin-right: 30px;">
+                    </div><div class="owl-item cloned" style="width: 412px; margin-right: 30px;">
                         <div class="single-events-card style2">
                             <div class="events-image">
                                 <a href="#"><img src="assets/images/hostel-food.png" alt="Image"></a>
@@ -116,8 +113,7 @@
 
                             </div>
                         </div>
-                    </div>
-                    <div class="owl-item cloned" style="width: 333px; margin-right: 30px;">
+                    </div><div class="owl-item cloned" style="width: 412px; margin-right: 30px;">
                         <div class="single-events-card style2">
                             <div class="events-image">
                                 <a href="#"><img src="assets/images/security-access.jpg" alt="Image"></a>
@@ -135,7 +131,61 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                    
+                    
+                    
+                <div class="owl-item cloned active" style="width: 412px; margin-right: 30px;">
+                        <div class="single-events-card style2">
+                            <div class="events-image">
+                                <a href="#"><img src="assets/images/amenities.png" alt="Image"></a>
+                            </div>
+                            <div class="events-content">
+                                <a href="#">
+                                    <h3>Rooms</h3>
+                                </a>
+                                <p>Each room in the hostel is a part of a unit where two rooms share a common wash
+                                    basin area, bathroom, and a small balcony
+                                    The bathroom contains toilet area, water heater fitted.Each room has its
+                                    separate sliding door to access wash basin area,
+                                    bathroom, and balcony.Each room has separate entry.</p>
+                            </div>
+                        </div>
+                    </div><div class="owl-item cloned active" style="width: 412px; margin-right: 30px;">
+                        <div class="single-events-card style2">
+                            <div class="events-image">
+                                <a href="#"><img src="assets/images/hostel-food.png" alt="Image"></a>
+                            </div>
+                            <div class="events-content">
+                                <a href="#">
+                                    <h3>Food</h3>
+                                </a>
+                                <p>Food is one of the basic necessities of life. Food contains nutrients—substances
+                                    essential for the growth, repair, and maintenance of body tissues and for the
+                                    regulation of vital processes. Nutrients provide the energy our bodies need to
+                                    function.
+                                    The energy in food is measured in units called calories.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div><div class="owl-item cloned active" style="width: 412px; margin-right: 30px;">
+                        <div class="single-events-card style2">
+                            <div class="events-image">
+                                <a href="#"><img src="assets/images/security-access.jpg" alt="Image"></a>
+                            </div>
+                            <div class="events-content">
+                                <a href="#">
+                                    <h3>Security</h3>
+                                </a>
+                                <p>the system ensures accurate attendance records, allowing the warden to
+                                    efficiently manage students. Parents are also
+                                    notified instantly if their ward is absent, providing timely updates and
+                                    fostering better communication.A system collects biometric characteristics
+                                    unique to every person. </p>
+
+                            </div>
+                        </div>
+                    </div></div>
             </div>
             <!-- <div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><i
                         class="ri-arrow-left-line"></i></button><button type="button" role="presentation"
@@ -144,6 +194,6 @@
                     role="button" class="owl-dot"><span></span></button><button role="button"
                     class="owl-dot"><span></span></button><button role="button"
                     class="owl-dot"><span></span></button></div> -->
-        </div>
+        <div class="owl-nav disabled"><button type="button" role="presentation" class="owl-prev"><i class="ri-arrow-left-line"></i></button><button type="button" role="presentation" class="owl-next"><i class="ri-arrow-right-line"></i></button></div><div class="owl-dots disabled"><button role="button" class="owl-dot active"><span></span></button></div></div>
     </div>
 </div>
