--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent" style="display: block;">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">
+                            <a routerLink="/main" class="nav-link">
                                 Home
                             </a>
                         </li>
@@ -38,7 +38,7 @@
                         </li>
                         <li class="pt-3">
                             <div class="sidebar-btn">
-                                <a href="#" class="default-btne">LogIn</a>
+                                <a  (click)="navigateToLogin()" class="default-btne">LogIn</a>
                             </div>
                         </li>
                     </ul>
