--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div id="home">
    <app-home></app-home>
 </div>
@@ -13,3 +14,4 @@
     <i class="ri-arrow-up-s-line"></i>
     <i class="ri-arrow-up-s-line"></i>
 </div>
+<app-footer></app-footer>
