--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="hero-slider2 owl-carousel owl-theme owl-loaded owl-drag">
         
         
-    <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-3132px, 0px, 0px); transition: all 1s ease 0s; width: 6264px;"><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-4">
+    <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-2834px, 0px, 0px); transition: all 1s ease 0s; width: 8502px;"><div class="owl-item cloned" style="width: 1417px;"><div class="slider-item banner-bg-4">
             <div class="slider-item">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
                     <source src="./assets/images/hostel.mp4" type="video/mp4">
@@ -21,7 +21,7 @@
                     <a href="#" class="default-btn btn">Start a Journey <i class="flaticon-next"></i></a>
                 </div> -->
             </div>
-        </div></div><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-5">
+        </div></div><div class="owl-item cloned" style="width: 1417px;"><div class="slider-item banner-bg-5">
             <div class="">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
                     <source src="./assets/images/incuppy-2.mp4" type="video/mp4">
@@ -40,7 +40,7 @@
                     <a href="#" class="default-btn btn">Start a Journey <i class="flaticon-next"></i></a>
                 </div> -->
             </div>
-        </div></div><div class="owl-item" style="width: 1044px;"><div class="slider-item banner-bg-4">
+        </div></div><div class="owl-item active" style="width: 1417px;"><div class="slider-item banner-bg-4">
             <div class="slider-item">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
                     <source src="./assets/images/hostel.mp4" type="video/mp4">
@@ -59,7 +59,7 @@
                     <a href="#" class="default-btn btn">Start a Journey <i class="flaticon-next"></i></a>
                 </div> -->
             </div>
-        </div></div><div class="owl-item active" style="width: 1044px;"><div class="slider-item banner-bg-5">
+        </div></div><div class="owl-item" style="width: 1417px;"><div class="slider-item banner-bg-5">
             <div class="">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
                     <source src="./assets/images/incuppy-2.mp4" type="video/mp4">
@@ -78,7 +78,7 @@
                     <a href="#" class="default-btn btn">Start a Journey <i class="flaticon-next"></i></a>
                 </div> -->
             </div>
-        </div></div><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-4">
+        </div></div><div class="owl-item cloned" style="width: 1417px;"><div class="slider-item banner-bg-4">
             <div class="slider-item">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
                     <source src="./assets/images/hostel.mp4" type="video/mp4">
@@ -97,7 +97,7 @@
                     <a href="#" class="default-btn btn">Start a Journey <i class="flaticon-next"></i></a>
                 </div> -->
             </div>
-        </div></div><div class="owl-item cloned" style="width: 1044px;"><div class="slider-item banner-bg-5">
+        </div></div><div class="owl-item cloned" style="width: 1417px;"><div class="slider-item banner-bg-5">
             <div class="">
                 <video autoplay="" muted="" loop="" playsinline="" preload="metadata" poster="">
                     <source src="./assets/images/incuppy-2.mp4" type="video/mp4">
@@ -116,8 +116,30 @@
                     <a href="#" class="default-btn btn">Start a Journey <i class="flaticon-next"></i></a>
                 </div> -->
             </div>
-        </div></div></div></div><div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><i class="ri-arrow-left-line"></i></button><button type="button" role="presentation" class="owl-next"><i class="ri-arrow-right-line"></i></button></div><div class="owl-dots disabled"></div></div>
-</div><div class="campus-information-area pt-100 pb-40">
+        </div>
+    </div>
+</div>
+</div>
+<div class="owl-nav">
+    <button type="button" role="presentation" class="owl-prev">
+        <i class="ri-arrow-left-line">
+
+        </i>
+    </button>
+    <button type="button" role="presentation" class="owl-next">
+        <i class="ri-arrow-right-line"> 
+
+        </i>
+    </button>
+</div>
+<div class="owl-dots disabled">
+    
+</div>
+</div>
+</div>
+
+
+<div class="campus-information-area pt-100 pb-40">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 aos-init aos-animate" data-aos="fade-right" data-aos-easing="ease-in-sine" data-aos-duration="1300" data-aos-once="true">
