creat feature component

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,4 @@
-
-
-<div class="campus-information-area pt-100 pb-40">
+<div class="campus-information-area pt-100 pb-40" id="contact-form">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 aos-init aos-animate" data-aos="fade-right" data-aos-easing="ease-in-sine" data-aos-duration="1300" data-aos-once="true">
@@ -90,7 +88,7 @@
                          class="flaticon-next"></i></a> -->
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 ">
                 <div class="estemate-form">
                     <h3>Request A Free Estimate</h3>
                     <form>
