--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer-area pt-70 pb-20 ">
+<div class="footer-area pt-70 pb-10 ">
     <div class="container">
         <div class="row">
             <div class="col-lg-5 col-sm-6">
@@ -10,8 +10,7 @@
                         <ul>
                             <li><a href="tel:+01987655567685">+01-9876-5556-7685
                                 </a></li>
-                            <li><a href="#"><span class="__cf_email__"
-                                        data-cfemail="29484d444047695a48475c074c4d5c">[email&#160;protected]</span></a>
+                            <li><a href="#"><span class="__cf_email__" data-cfemail="29484d444047695a48475c074c4d5c">[email&nbsp;protected]</span></a>
                             </li>
                         </ul>
                     </div>
@@ -42,11 +41,25 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="col-lg-3 col-sm-6">
+                <div class="footer-widjet">
+                    <h3>Contact Us</h3>
+                    <div class="list">
+                        <ul>
+                            <li><a href="#">+91 79456123</a></li>
+                            <li><a mailto:href="#">abcd@gamil.com</a></li>
+                            <li><a href="#">Add litin, 103-1 kitterground</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="shape">
+            <img src="assets/images/shape-1.png" alt="Image">
+        </div>
     </div>
 </div>
-
-<div class="copyright-area">
+<div class="copyright-area ">
     <div class="container">
         <div class="copyright">
             <div class="row">
@@ -64,7 +77,7 @@
                                 <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
                             </li>
                             <li>
-                                <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-fill"></i></a>
+                                <a href="https://linkedin.com/?lang=en" target="_blank"><i class=" ri-linkedin-fill"></i></a>
                             </li>
                         </ul>
                     </div>
