creat sidebar component

--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -1,3 +1,6 @@
-<app-fheader></app-fheader>
-<router-outlet></router-outlet>
-<app-sidebar></app-sidebar>
+<div><app-fheader></app-fheader></div>
+<div ><app-sidebar></app-sidebar></div>
+<div class="appside"><router-outlet></router-outlet></div>
+
+
+
