--- a/src/app/feature/sidebar/sidebar.component.html
+++ b/src/app/feature/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
           </a>
           <ul class="nav sub-group-menu" [ngClass]="{'menu-open': activeMenuItem === 'registration', 'hide': activeMenuItem !== 'registration'}">
             <li class="nav-item">
-              <a href="Guest-registration.html" class="nav-link"><i class="fas fa-angle-right"></i>Guest Registration</a>
+              <a routerLink="/feature/guest-registration" class="nav-link"><i class="fas fa-angle-right"></i>Guest Registration</a>
             </li>
             <li class="nav-item">
               <a href="manage-Guest.html" class="nav-link"><i class="fas fa-angle-right"></i>Manage Guest</a>
