--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -1,6 +1,7 @@
 <div><app-fheader></app-fheader></div>
 <div ><app-sidebar></app-sidebar></div>
 <div class="appside"><router-outlet></router-outlet></div>
+<div ><app-ffooter></app-ffooter></div>
 
 
 
