--- a/src/app/feature/add-a-room/add-a-room.component.html
+++ b/src/app/feature/add-a-room/add-a-room.component.html
@@ -1,40 +1,42 @@
 <div class="dashboard-content-one">
     <!-- Breadcubs Area Start Here -->
     <div class="breadcrumbs-area">
+        <h3>Add A Room</h3>
     </div>
     <!-- Breadcubs Area End Here -->
     <!-- Account Settings Area Start Here -->
     <div class="row">
-        <div class="col-10">
+        <div class="col-12">
             <div class="card">
                 <div class="card-body">
+                    <div class="heading-layout1">
+                        <div class="item-title">
+                            <h5>Add A Room</h5>
+                        </div>
+                    </div>
 
                     <form class="new-added-form">
                         <div class="row">
 
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>Seater</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
 
                             <div class="col-xl-12 col-lg-6 col-12 form-group">
-                                <label>Registration No </label>
-                                <input type="text" placeholder="" class="form-control">
-                            </div>
-
-                            <div class="col-xl-6 col-lg-6 col-12 form-group">
-                                <label> Name </label>
-                                <input type="text" placeholder="" class="form-control">
-                            </div>
-
-                            <div class="col-xl-6 col-lg-6 col-12 form-group">
                                 <label>Room No</label>
                                 <input type="text" placeholder="" class="form-control">
                             </div>
 
-                           
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>Fees Per Month</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
 
-                            <div class="col-12 form-group mg-t-8 align-items-center ">
-                                <button type="submit" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark"><a href="payment-method.html" style="color: unset;">Pay</a></button>
-                                    
-                                    
 
+                            <div class="col-12 form-group mg-t-8">
+                                <button type="submit" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark">Add
+                                    Room</button>
                             </div>
                         </div>
                     </form>
