--- a/src/app/feature/sidebar/sidebar.component.html
+++ b/src/app/feature/sidebar/sidebar.component.html
@@ -17,10 +17,10 @@
           </a>
           <ul class="nav sub-group-menu" [ngClass]="{'menu-open': activeMenuItem === 'registration', 'hide': activeMenuItem !== 'registration'}">
             <li class="nav-item">
-              <a href="Guest-registration.html" class="nav-link"><i class="fas fa-angle-right"></i>Guest Registration</a>
+  <a routerLink="/feature/guest-registration" class="nav-link"><i class="fas fa-angle-right"></i>Guest Registration</a>
             </li>
             <li class="nav-item">
-              <a href="manage-Guest.html" class="nav-link"><i class="fas fa-angle-right"></i>Manage Guest</a>
+              <a routerLink="/feature/mange-guest" class="nav-link"><i class="fas fa-angle-right"></i>Manage Guest</a>
             </li>
           </ul>
         </li>
@@ -34,10 +34,10 @@
           </a>
           <ul class="nav sub-group-menu" [ngClass]="{'menu-open': activeMenuItem === 'rooms', 'hide': activeMenuItem !== 'rooms'}">
             <li class="nav-item">
-              <a href="add-a-room.html" class="nav-link"><i class="fas fa-angle-right"></i>Add a Room</a>
+              <a routerLink="/feature/add-a-room" class="nav-link"><i class="fas fa-angle-right"></i>Add a Room</a>
             </li>
             <li class="nav-item">
-              <a href="manage-rooms.html" class="nav-link"><i class="fas fa-angle-right"></i>Manage Rooms</a>
+              <a routerLink="/feature/manage-rooms"class="nav-link"><i class="fas fa-angle-right"></i>Manage Rooms</a>
             </li>
           </ul>
         </li>
@@ -51,16 +51,16 @@
           </a>
           <ul class="nav sub-group-menu" [ngClass]="{'menu-open': activeMenuItem === 'cafeteria', 'hide': activeMenuItem !== 'cafeteria'}">
             <li class="nav-item">
-              <a href="account.html" class="nav-link"><i class="fas fa-angle-right"></i>My Account</a>
+              <a routerLink="/feature/my-account" class="nav-link"><i class="fas fa-angle-right"></i>My Account</a>
             </li>
             <li class="nav-item">
-              <a href="address-book.html" class="nav-link"><i class="fas fa-angle-right"></i>Address Book</a>
+              <a routerLink="/feature/address-book" class="nav-link"><i class="fas fa-angle-right"></i>Address Book</a>
             </li>
             <li class="nav-item">
-              <a href="recent-order.html" class="nav-link"><i class="fas fa-angle-right"></i>Recent Orders</a>
+              <a routerLink="/feature/recent-orders" class="nav-link"><i class="fas fa-angle-right"></i>Recent Orders</a>
             </li>
             <li class="nav-item">
-              <a href="recent-reservations.html" class="nav-link"><i class="fas fa-angle-right"></i>Recent Reservations</a>
+              <a routerLink="/feature/recent-reservations" class="nav-link"><i class="fas fa-angle-right"></i>Recent Reservations</a>
             </li>
           </ul>
         </li>
@@ -76,13 +76,13 @@
     </a>
     <ul class="nav sub-group-menu" [ngClass]="{'menu-open': activeMenuItem === 'securityAccess', 'hide': activeMenuItem !== 'securityAccess'}">
       <li class="nav-item">
-        <a href="Visitor-Registration.html" class="nav-link"><i class="fas fa-angle-right"></i>Registration</a>
+        <a routerLink="/feature/registration" class="nav-link"><i class="fas fa-angle-right"></i>Registration</a>
       </li>
       <li class="nav-item">
-        <a href="visit-information.html" class="nav-link "><i class="fas fa-angle-right"></i>Visit Information</a>
+        <a routerLink="/feature/visit-information" class="nav-link "><i class="fas fa-angle-right"></i>Visit Information</a>
       </li>
       <li class="nav-item">
-        <a href="Visit- history.html" class="nav-link"><i class="fas fa-angle-right"></i>Visit History</a>
+        <a routerLink="/feature/visit-history" class="nav-link"><i class="fas fa-angle-right"></i>Visit History</a>
       </li>
     </ul>
   </li>
@@ -96,10 +96,10 @@
     </a>
     <ul class="nav sub-group-menu" [ngClass]="{'menu-open': activeMenuItem === 'payment', 'hide': activeMenuItem !== 'payment'}">
       <li class="nav-item">
-        <a href="Transactions.html" class="nav-link"><i class="fas fa-angle-right"></i>Transactions</a>
+        <a routerLink="/feature/transactions" class="nav-link"><i class="fas fa-angle-right"></i>Transactions</a>
       </li>
       <li class="nav-item">
-        <a href="pay.html" class="nav-link"><i class="fas fa-angle-right"></i>Pay</a>
+        <a routerLink="/feature/pay" class="nav-link"><i class="fas fa-angle-right"></i>Pay</a>
       </li>
     </ul>
   </li>
@@ -116,10 +116,10 @@
           </a>
           <ul class="nav sub-group-menu" [ngClass]="{'menu-open': activeMenuItem === 'complaint', 'hide': activeMenuItem !== 'complaint'}">
             <li class="nav-item">
-              <a href="complaint.html" class="nav-link"><i class="fas fa-angle-right"></i>Complaint</a>
+              <a routerLink="/feature/complaint" class="nav-link"><i class="fas fa-angle-right"></i>Complaint</a>
             </li>
             <li class="nav-item">
-              <a href="Report.html" class="nav-link"><i class="fas fa-angle-right"></i>Report</a>
+              <a routerLink="/feature/report" class="nav-link"><i class="fas fa-angle-right"></i>Report</a>
             </li>
           </ul>
         </li>
