--- a/src/app/feature/complaint/complaint.component.html
+++ b/src/app/feature/complaint/complaint.component.html
@@ -1,45 +1,54 @@
-<div class="row">
-    <div class="col-10">
-        <div class="card">
-            <div class="card-body">
+<div class="dashboard-content-one">
+    <!-- Breadcubs Area Start Here -->
+    <div class="breadcrumbs-area">
+    </div>
+    <!-- Breadcubs Area End Here -->
+    <!-- Account Settings Area Start Here -->
+    <div class="row">
+        <div class="col-10">
+            <div class="card">
+                <div class="card-body">
 
-                <form class="new-added-form">
-                    <div class="row">
+                    <form class="new-added-form">
+                        <div class="row">
 
 
-                        <div class="col-xl-12 col-lg-6 col-12 form-group">
-                            <label>Registration No </label>
-                            <input type="text" placeholder="" class="form-control">
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>Registration No </label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+
+                            <div class="col-xl-4 col-lg-6 col-12 form-group">
+                                <label> Name </label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+
+                            <div class="col-xl-4 col-lg-6 col-12 form-group">
+                                <label>Room No</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+                            <div class="col-xl-4 col-lg-6 col-12 form-group">
+                                <label>Contact No</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-12 form-group">
+                                <label>Remarks: </label>
+                                <textarea class="textarea form-control" name="message" id="form-message" cols="4" rows="4"></textarea>
+                            </div>
+
+                           
+
+                            <div class="col-12 form-group mg-t-8 align-items-center ">
+                                <button type="submit" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark">Send</button>
+                                    
+                                    
+
+                            </div>
                         </div>
-
-                        <div class="col-xl-4 col-lg-6 col-12 form-group">
-                            <label> Name </label>
-                            <input type="text" placeholder="" class="form-control">
-                        </div>
-
-                        <div class="col-xl-4 col-lg-6 col-12 form-group">
-                            <label>Room No</label>
-                            <input type="text" placeholder="" class="form-control">
-                        </div>
-                        <div class="col-xl-4 col-lg-6 col-12 form-group">
-                            <label>Contact No</label>
-                            <input type="text" placeholder="" class="form-control">
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-12 form-group">
-                            <label>Remarks: </label>
-                            <textarea class="textarea form-control" name="message" id="form-message" cols="4" rows="4"></textarea>
-                        </div>
-
-                       
-
-                        <div class="col-12 form-group mg-t-8 align-items-center ">
-                            <button type="submit" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark">Send</button>
-
-                        </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
 
-</div>
+    </div>
+    
