--- a/src/app/feature/recent-reservations/recent-reservations.component.html
+++ b/src/app/feature/recent-reservations/recent-reservations.component.html
@@ -1,1 +1,15 @@
-<p>recent-reservations works!</p>
+<div class="dashboard-content-one">
+    <!-- All Subjects Area Start Here -->
+    <div class="breadcrumbs-area">
+        <h3>Recent Reservations</h3>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>Recent Reservations</li>
+        </ul>
+    </div>
+
+    <div class="bg-white text-center pt-5">
+        <h3>There are No Reservations</h3>
+    </div>
