--- a/src/app/feature/report/report.component.html
+++ b/src/app/feature/report/report.component.html
@@ -1,52 +1,64 @@
-<div class="row">
-    <div class="col-10">
-        <div class="card">
-            <div class="card-body">
+<div class="dashboard-content-one">
+    <!-- Breadcubs Area Start Here -->
+    <div class="breadcrumbs-area">
+    </div>
+    <!-- Breadcubs Area End Here -->
+    <!-- Account Settings Area Start Here -->
+    <div class="row">
+        <div class="col-10">
+            <div class="card">
+                <div class="card-body">
 
-                <form class="new-added-form">
-                    <div class="row">
+                    <form class="new-added-form">
+                        <div class="row">
 
 
-                        <div class="col-xl-6 col-lg-6 col-12 form-group">
-                            <label>S.No </label>
-                            <input type="text" placeholder="" class="form-control">
-                        </div>
-
-                        <div class="col-xl-6 col-lg-6 col-12 form-group">
-                            <label> Name </label>
-                            <input type="text" placeholder="" class="form-control">
-                        </div>
-
-                        <div class="col-xl-6 col-lg-6 col-12 form-group">
-                            <label>Room No</label>
-                            <input type="text" placeholder="" class="form-control">
-                        </div>
-
-                        <div class="col-lg-6 col-12 form-group">
-                            <label>Action</label>
-                            <div class=" d-flex justify-content-around">
-                                <div class="row" style="display: -webkit-inline-box;">
-                                    <input type="radio" id="" name="fav_language" value="Without Food">
-                                    <label class="pl-2" style="margin-right:8px;"> Done </label>
-                                    <img src="./img/check.png" alt="">
-
-                                </div>
-                                <div class="row" style="display: -webkit-inline-box;">
-                                    <input type="radio" id="" name="fav_language" value="With Food">
-                                    <label class="pl-2" style="margin-right:8px;">Not Done </label>
-                                    <img src="./img/multiply.png" alt="">
-                                </div>
+                            <div class="col-xl-6 col-lg-6 col-12 form-group">
+                                <label>S.No </label>
+                                <input type="text" placeholder="" class="form-control">
                             </div>
-                         
-                        </div>
 
-                        <div class="col-12 form-group mg-t-8 align-items-center ">
-                            <button type="submit" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark">Send</button>
+                            <div class="col-xl-6 col-lg-6 col-12 form-group">
+                                <label> Name </label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+
+                            <div class="col-xl-6 col-lg-6 col-12 form-group">
+                                <label>Room No</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+
+                            <div class="col-lg-6 col-12 form-group">
+                                <label>Action</label>
+                                <div class=" d-flex justify-content-around">
+                                    <div class="row" style="display: -webkit-inline-box;">
+                                        <input type="radio" id="" name="fav_language" value="Without Food">
+                                        <label class="pl-2" style="margin-right:8px;"> Done </label>
+                                        <img src="./img/check.png" alt="">
+
+                                    </div>
+                                    <div class="row" style="display: -webkit-inline-box;">
+                                        <input type="radio" id="" name="fav_language" value="With Food">
+                                        <label class="pl-2" style="margin-right:8px;">Not Done </label>
+                                        <img src="./img/multiply.png" alt="">
+                                    </div>
+                                </div>
+                             
+                            </div>
+
+
+                           
+
+                            <div class="col-12 form-group mg-t-8 align-items-center ">
+                                <button type="submit" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark">Send</button>
+                                    
+                                    
+
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
 
-</div>
+    </div>
