--- a/src/app/feature/visit-history/visit-history.component.html
+++ b/src/app/feature/visit-history/visit-history.component.html
@@ -1,76 +1,145 @@
-<div class="card height-auto">
-    <div class="card-body">
-        <div class="heading-layout1">
-            <div class="item-title">
-                <h3>Visit History</h3>
+<div class="dashboard-content-one">
+    <!-- Breadcubs Area Start Here -->
+    <div class="breadcrumbs-area">
+        <h3>Visit History</h3>
+    </div>
+    <!-- Breadcubs Area End Here -->
+    <!-- Account Settings Area Start Here -->
+    <!-- <div class="row">
+
+        <div class=" col-12 ">
+            <div class="card">
+                <div class="card-body">
+                    <div class="heading-layout1">
+                        <div class="item-title">
+                            <h5>Visit Information</h5>
+                        </div>
+                    </div>
+
+                    <form class="new-added-form">
+                        <div class="row">
+
+
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>Name Of The Person To Meet</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>Department Of The Meet Person</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>ID Of The Meet Person</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>Visitor ID</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>Reason of The Visit</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>Time Limit</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>Acess TO Which Department</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+                            <div class="col-xl-12 col-lg-6 col-12 form-group">
+                                <label>Remarks From Visitor</label>
+                                <input type="text" placeholder="" class="form-control">
+                            </div>
+
+                            
+                            <div class="col-12 form-group mg-t-8">
+                                <button type="submit"
+                                    class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark">Add </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-        <!-- <form class="mg-b-20">
-            <div class="row gutters-8 d-flex justify-content-between">
-                <div class="col-3-xxxl col-xl-3 col-lg-3 col-12 form-group">
-                    <label>Show </label>
-                    <select class="select2">
-                        <option value="1">10 </option>
-                        <option value="2">20 </option>
-                        <option value="3">30 </option>
-                        <option value="3">40 </option>
-                    </select>
-                    <label> entries</label>
-                </div>
-                <div class=" col-4-xxxl col-xl-3 col-lg-3 col-12 form-group d-flex">
-                    <input type="text" placeholder="Search..." class="form-control">
-                    <button type="submit" style="width: 150px;"
-                        class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
+
+    </div> -->
+    <div class="card height-auto">
+        <div class="card-body">
+            <div class="heading-layout1">
+                <div class="item-title">
+                    <h3>Visit History</h3>
                 </div>
             </div>
-        </form> -->
-        <div class="table-responsive">
-            <table class="table display data-table text-nowrap">
-                <thead>
-                    <tr>
-                        <th>S.No</th>
-                        <th>Visitor ID</th>
-                        <th>Previous Visited Date</th>
-                        <th>Name Of The Person To meet</th>
-                        <th>ID Of The Person To meet</th>
-                        
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>B10992</td>
-                        <td>B.Tech</td>
-                        <td>Bachelor of technology</td>
-                        <td>2020-07-04 12:31:42</td>
+            <!-- <form class="mg-b-20">
+                <div class="row gutters-8 d-flex justify-content-between">
+                    <div class="col-3-xxxl col-xl-3 col-lg-3 col-12 form-group">
+                        <label>Show </label>
+                        <select class="select2">
+                            <option value="1">10 </option>
+                            <option value="2">20 </option>
+                            <option value="3">30 </option>
+                            <option value="3">40 </option>
+                        </select>
+                        <label> entries</label>
+                    </div>
+                    <div class=" col-4-xxxl col-xl-3 col-lg-3 col-12 form-group d-flex">
+                        <input type="text" placeholder="Search..." class="form-control">
+                        <button type="submit" style="width: 150px;"
+                            class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
+                    </div>
+                </div>
+            </form> -->
+            <div class="table-responsive">
+                <table class="table display data-table text-nowrap">
+                    <thead>
+                        <tr>
+                            <th>S.No</th>
+                            <th>Visitor ID</th>
+                            <th>Previous Visited Date</th>
+                            <th>Name Of The Person To meet</th>
+                            <th>ID Of The Person To meet</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>B10992</td>
+                            <td>B.Tech</td>
+                            <td>Bachelor of technology</td>
+                            <td>2020-07-04 12:31:42</td>
 
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>B10992</td>
-                        <td>B.Tech</td>
-                        <td>Bachelor of technology</td>
-                        <td>2020-07-04 12:31:42</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>B10992</td>
+                            <td>B.Tech</td>
+                            <td>Bachelor of technology</td>
+                            <td>2020-07-04 12:31:42</td>
 
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>B10992</td>
-                        <td>B.Tech</td>
-                        <td>Bachelor of technology</td>
-                        <td>2020-07-04 12:31:42</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>B10992</td>
+                            <td>B.Tech</td>
+                            <td>Bachelor of technology</td>
+                            <td>2020-07-04 12:31:42</td>
 
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>B10992</td>
-                        <td>B.Tech</td>
-                        <td>Bachelor of technology</td>
-                        <td>2020-07-04 12:31:42</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>B10992</td>
+                            <td>B.Tech</td>
+                            <td>Bachelor of technology</td>
+                            <td>2020-07-04 12:31:42</td>
 
-                    </tr>
-                </tbody>
-            </table>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
+    
