worked on page navigation to open login page

--- a/src/app/feature/my-account/my-account.component.html
+++ b/src/app/feature/my-account/my-account.component.html
@@ -26,7 +26,7 @@
                             <div><i class="fa fa-shopping-basket p-3" style="font-size: 60px;"></i>
                             </div>
                             <div class="item-subtitle p-3">There are no menus added in your cart</div>
-                            <button type="button" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark">ORDER
+                            <button  (click)="OrderNow()"  type="button" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark">ORDER
                                 NOW</button>
                         </div>
                     </div>
