--- a/src/app/feature/fheader/fheader.component.html
+++ b/src/app/feature/fheader/fheader.component.html
@@ -53,8 +53,9 @@
                     </div>
                     <div class="item-content">
                         <ul class="settings-list">
-                            <li><a href="profile.html"><i class="flaticon-user"></i>My Account</a></li>
-                            <li><a href="main-login-page.html"><i class="flaticon-turn-off"></i>Log Out</a></li>
+                            
+                            <li><a href="profile.html" routerLink="/my-account"><i class="flaticon-user"></i>My Account</a></li>
+                            <li><a href="main-login-page.html" routerLink="/login"><i class="flaticon-turn-off"></i>Log Out</a></li>
                         </ul>
                     </div>
                 </div>
